added simple page, and simple logic to make memory Card game

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 900px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,16 @@
 
 .read-the-docs {
   color: #888;
+}
+.memoryPhoto {
+  width: 250px;
+  height: 250px;
+  border-radius: 10%;
+  object-fit: cover;
+}
+.memoryCards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
 }
